--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-loader-spinner": "^5.4.5",
     "react-paystack": "^4.0.3",
     "react-redux": "^8.1.2",
     "react-router-bootstrap": "^0.26.2",
