new updates to commit

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": ".",
+  "homepage": "https://github.com/bintus-ux/bintus-store-frontend-repo",
   "name": "bintus-store",
   "version": "0.1.0",
   "private": true,
